--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -32,6 +32,13 @@ jobs:
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
+          
+      - name: Import GPG Key
+        run: |
+          echo "${{ secrets.GPG_SIGNING_KEY }}" | gpg --import
+        env:
+          GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
+
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
