--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,15 +18,10 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Import GPG Key and Set Passphrase for Agent
+      - name: Import GPG Key
         run: |
-          export GPG_TTY=$(tty)
-          echo "${{ secrets.GPG_SIGNING_KEY }}" | base64 --decode | gpg --batch --import
+          echo "${{ secrets.GPG_SIGNING_KEY }}" | base64 --decode | gpg --batch --passphrase "${{ secrets.GPG_PASSWORD }}" --import
           gpg --list-secret-keys --keyid-format LONG
-          echo RELOADAGENT | gpg-connect-agent
-          echo "${{ secrets.GPG_PASSWORD }}" | gpg-connect-agent "SETKEY ${{ secrets.GPG_KEY_ID }}" /bye
-        env:
-          GPG_TTY: $(tty)
 
       - name: Verify Secret Key Import
         run: gpg --list-secret-keys --keyid-format LONG
