--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -43,8 +43,8 @@ jobs:
           </settings>
           EOF
 
-      - name: Publish to Maven Central
-        run: |
-          mvn -B -DskipTests -Dgpg.passphrase="${{ secrets.GPG_PASS }}" release:clean release:prepare release:perform -Possrh
+      - name: Publish package
+        run: mvn --batch-mode deploy
         env:
-          GPG_TTY: $(tty)
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
