--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,43 +8,26 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    # https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-java-with-maven
+    # https://github.com/actions/setup-java
+    - uses: actions/checkout@v4    
+    - name: Set up JDK
+      uses: actions/setup-java@v4
+      with:
+        java-version: 21
+        distribution: 'temurin'
+        cache: maven
+        # https://central.sonatype.org/publish/generate-portal-token/
+        server-id: central
+        server-username: MAVEN_CENTRAL_USERNAME
+        server-password: MAVEN_CENTRAL_TOKEN
+        gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: 'maven'
-
-      - name: Import GPG Key
-        run: |
-          echo "${{ secrets.GPG_SIGNING_KEY }}" | base64 --decode | gpg --batch --passphrase "${{ secrets.GPG_PASSWORD }}" --import
-          gpg --list-secret-keys --keyid-format LONG
-
-      - name: Verify Secret Key Import
-        run: gpg --list-secret-keys --keyid-format LONG
-
-      - name: Check GPG Version
-        run: gpg --version
-
-      - name: Configure Maven settings.xml
-        run: |
-          cat << EOF > ~/.m2/settings.xml
-          <settings>
-            <servers>
-              <server>
-                <id>ossrh</id>
-                <username>${{ secrets.MAVEN_USERNAME }}</username>
-                <password>${{ secrets.MAVEN_PASSWORD }}</password>
-              </server>
-            </servers>
-          </settings>
-          EOF
-
-      - name: Publish package
-        run: mvn --batch-mode deploy
-        env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+    - name: Publish to Maven Central Portal
+      # if autoPublish is false (see pom.xml), we need to publish manually via https://central.sonatype.com/publishing/deployments
+      run: mvn --batch-mode deploy
+      env:
+        MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+        MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_PASSWORD }}
+        MAVEN_GPG_PASSPHRASE: ''
