--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,4 +30,4 @@ jobs:
       env:
         MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_PASSWORD }}
-        MAVEN_GPG_PASSPHRASE: ''
+        MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSWORD }}
