--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -28,6 +28,6 @@ jobs:
       # if autoPublish is false (see pom.xml), we need to publish manually via https://central.sonatype.com/publishing/deployments
       run: mvn --batch-mode deploy
       env:
-        MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-        MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_PASSWORD }}
+        MAVEN_CENTRAL_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_CENTRAL_TOKEN: ${{ secrets.OSSRH_TOKEN }}
         MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSWORD }}
