--- a/pom.xml
+++ b/pom.xml
@@ -74,28 +74,9 @@
             <version>1.14.4</version>
         </dependency>
     </dependencies>
-    
+
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <id>add-source</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${project.basedir}/src/main/java/org/ontouml/ontouml4j</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -103,26 +84,28 @@
                 <executions>
                     <execution>
                         <id>attach-sources</id>
+                        <phase>verify</phase>
                         <goals>
                             <goal>jar-no-fork</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-                      <!-- the following plugins are required for publishing to maven central -->
+                       <plugin>
+                           <groupId>org.apache.maven.plugins</groupId>
+                           <artifactId>maven-javadoc-plugin</artifactId>
+                           <version>2.9</version>
+                           <executions>
+                               <execution>
+                                   <id>attach-javadocs</id>
+                                   <phase>package</phase>
+                                   <goals>
+                                       <goal>jar</goal>
+                                   </goals>
+                               </execution>
+                           </executions>
+                       </plugin>
+            <!-- the following plugins are required for publishing to maven central -->
             <!-- https://central.sonatype.org/publish/publish-portal-maven/ -->
             <plugin>
                 <groupId>org.sonatype.central</groupId>
